[package]
name = "aws-mfa"
version = "1.0.17"
edition = "2021"
authors = ["Jean Mainguy"]
categories = ["command-line-utilities"]
keywords = ["aws", "mfa", "2fa"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jhandguy/aws-mfa"
documentation = "https://docs.rs/aws-mfa"
description = "Authenticate to AWS with MFA 🔐"

[lib]
name = "aws_mfa"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "aws-mfa"
test = false
doc = false

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "=1.0.89"
async-trait = "=0.1.83"
aws-config = { version = "=1.5.6", features = ["behavior-version-latest"] }
aws-credential-types = "=1.2.1"
aws-runtime = "=1.4.3"
aws-sdk-sts = "=1.43.0"
aws-smithy-runtime-api = "=1.7.2"
clap = { version = "=4.5.18", features = ["derive", "env"] }
thiserror = "=1.0.64"
time = "=0.3.36"
tokio = { version = "=1.40.0", features = ["full"] }

[dev-dependencies]
aws-smithy-runtime = { version = "=1.7.1", features = ["test-util"]}
aws-smithy-types = "=1.2.7"
http = "=1.1.0"
