[package]
name = "aws-mfa"
version = "1.0.23"
edition = "2021"
authors = ["Jean Mainguy"]
categories = ["command-line-utilities"]
keywords = ["aws", "mfa", "2fa"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jhandguy/aws-mfa"
documentation = "https://docs.rs/aws-mfa"
description = "Authenticate to AWS with MFA 🔐"

[lib]
name = "aws_mfa"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "aws-mfa"
test = false
doc = false

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
async-trait = "0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-runtime = "1"
aws-sdk-sts = "1"
aws-smithy-runtime-api = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
time = "0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
aws-smithy-runtime = { version = "1", features = ["test-util"]}
aws-smithy-types = "1"
http = "1"
